# mediguard

./: .editorconfig  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTES.md  README.md  SECURITY.md
.github/workflows/: ci.yml
backend/: .env.example  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: a7f804248236_create_users_table.py
backend/app/: __init__.py  main.py
backend/app/api/: auth.py
backend/app/core/: __init__.py  config.py  logging.py  security.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/models/: __init__.py  user.py
backend/app/schemas/: user.py
backend/app/tests/: test_health.py
backend/tests/: __init__.py  test_config.py  test_user_model.py
docs/decisions/: 0001-technology-stack-selection.md
