# =========================================================================
# MediGuard Backend - Project Manifest
# Reference: https://packaging.python.org/en/latest/specifications/pyproject-toml/
# =========================================================================

[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

# -------------------------------------------------------------------------
# Project metadata (PEP 621)
# -------------------------------------------------------------------------
[project]
name = "mediguard-backend"
version = "0.1.0"
description = "MediGuard backend service - FastAPI app for medication interaction tracking"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Jenil Gohel", email = "jgohel9902@users.noreply.github.com" },
]
keywords = ["healthcare", "fastapi", "medication", "drug-interactions"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.25",
    "alembic>=1.13.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "httpx>=0.27.0",
    "structlog>=24.1.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=24.2.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "types-passlib",
    "types-python-jose",
]

[project.urls]
Homepage = "https://github.com/jgohel9902/mediguard"
Repository = "https://github.com/jgohel9902/mediguard"
Issues = "https://github.com/jgohel9902/mediguard/issues"

# -------------------------------------------------------------------------
# Hatchling build backend
# -------------------------------------------------------------------------
[tool.hatch.build.targets.wheel]
packages = ["app"]

# -------------------------------------------------------------------------
# Black - code formatter
# -------------------------------------------------------------------------
[tool.black]
line-length = 100
target-version = ["py312"]

# -------------------------------------------------------------------------
# Ruff - linter and import sorter
# -------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [".venv", "alembic"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort (import sorting)
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",  # line-too-long - black handles formatting
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # allow assert statements in tests

# -------------------------------------------------------------------------
# mypy - static type checker
# -------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
exclude = ["alembic/"]
mypy_path = "."
explicit_package_bases = true
warn_unused_configs = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_return_any = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["jose.*", "passlib.*"]
ignore_missing_imports = true

# -------------------------------------------------------------------------
# pytest
# -------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]

# -------------------------------------------------------------------------
# Coverage (opt-in via `--cov` when running pytest)
# -------------------------------------------------------------------------
[tool.coverage.run]
source = ["app"]
omit = ["tests/*", "alembic/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
